--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
         </div>
     </div>
 
-    <!-- 오답 팝업 -->
-    <div class="modal fade" id="wrongModal" tabindex="-1" role="dialog" aria-labelledby="answerModalLabel"
-        aria-hidden="true">
+    <!-- 상세설명 팝업 -->
+    <div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="answerModalLabel">오답입니다.</h5>
+                    <h5 class="modal-title" id="detailModalLabel"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -101,17 +100,13 @@
 
 
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                        id="btn-close-modal">닫기</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"
-                        id="btn-next-question">다음</button>
-                </div>
             </div>
         </div>
     </div>
 
+
     <!-- Javascript -->
+
     <script>
         var map = new naver.maps.Map('map', {
             center: new naver.maps.LatLng(37.39234762613166, 127.13087848124754),
@@ -125,6 +120,7 @@
     <script src="map/map.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
