--- a/index.html
+++ b/index.html
@@ -67,38 +67,14 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="detailModalLabel"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <span type="button" onclick="closeDetailModal();">&times;</span>
                 </div>
                 <div class="modal-body">
-                    <h6>정답:</h6>
-                    <p id="quest-answer"></p>
-                    <h6 id="explanation-title">설명:</h6>
-                    <p id="explanation"></p>
-
-                    <!-- 추가설명 -->
-                    <div id="additional-explanation"></div>
-
-                    <!-- 설명추가 -->
-                    <button type="button" class="btn btn-link add-explanation-txt">설명추가</button>
-                    <br>
-                    <form class="add-explanation-form" style="display:none;">
-                        <div class="form-group">
-                            <label for="addExplanationUserName">이름</label>
-                            <input type="text" class="form-control" id="addExplanationUserName" placeholder="익명">
-                        </div>
-                        <div class="form-group">
-                            <label for="addExplanationContents">설명</label>
-                            <textarea class="form-control" id="addExplanationContents" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-sm">추가</button>
-                    </form>
-                    <br>
-
-                    <h6 id="reference-title">참조:</h6><a id="reference" target="_blank"></a>
-
-
+                    <h6>담임목사:<span id='pastorName'>김단일</span></h6>
+                    <h6>교구:</h6>
+                    <h6>지역:</h6>
+                    <h6>주소:</h6>
+                    <h6>전화번호:</h6>
                 </div>
             </div>
         </div>
@@ -106,7 +82,6 @@
 
 
     <!-- Javascript -->
-
     <script>
         var map = new naver.maps.Map('map', {
             center: new naver.maps.LatLng(37.39234762613166, 127.13087848124754),
