--- a/index_mobile.html
+++ b/index_mobile.html
@@ -62,6 +62,25 @@
         <div id="map" style="width:100%;height: calc(100vh - 3.5rem)"></div>
     </main>
 
+    <!-- 상세설명 팝업 -->
+    <div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="detailModalLabel"></h5>
+                    <span type="button" onclick="closeDetailModal();">&times;</span>
+                </div>
+                <div class="modal-body">
+                    <h6>담임목사:<span id='pastorName'>김단일</span></h6>
+                    <h6>교구:</h6>
+                    <h6>지역:</h6>
+                    <h6>주소:</h6>
+                    <h6>전화번호:</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Javascript -->
     <script>
         var map = new naver.maps.Map('map', {
@@ -74,6 +93,8 @@
     <script src="index.js"></script>
     <script src="search/search_m.js"></script>
     <script src="map/map.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
