--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <table class="table table-borderless">
                         <tbody>
                             <tr>
-                                <td><i class="bi-person-fill" style="color: green;"></i> 담임목사</td>
+                                <td style="width: 102px;"><i class="bi-person-fill" style="color: green;"></i> 담임목사</td>
                                 <th><span id='detailModalPastorName'></span></th>
                             </tr>
                             <tr>
