--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
                     <div class="container">
                         <ul class="nav justify-content-center">
                             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"
-                                    onclick="openAbout();">About</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">개인정보보호</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" onclick="openAbout();">About</a></li>
+                            <li class="nav-item"><a href="https://www.woorichurch.org" target="_blank" class="nav-link px-2 text-muted">분당우리교회</a></li>
                         </ul>
                     </div>
 
@@ -58,8 +57,6 @@
             <div class="col-md" style="margin:0; padding:0;">
                 <div id="map" style="width:100%;height:100%;"></div>
             </div>
-
-
         </div>
     </div>
 
@@ -103,13 +100,32 @@
 
     <!-- About 팝업 -->
     <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">About 일만성도파송운동</h5>
+                    <h5 class="modal-title">About</h5>
                     <span type="button" onclick="closeAboutModal();">&times;</span>
                 </div>
                 <div class="modal-body">
+                    <p class="lead">
+                        분당우리교회 일만성도 파송운동에 참여하는 29개 교구의 위치와 정보를 제공합니다.
+                    </p>
+
+                    <br>
+
+                    <h5>일만성도 파송운동의 2가지 의미</h5>
+                    <label>1. 하나님과의 약속을 지키는 차원에서의 의미</label><br>
+                    <label>2. 복음증거 차원의 의미</label>
+                    <br><br>
+                    <h5>일만성도 파송운동을 향한 2가지 꿈</h5>
+                    <label>1. 일만성도 파송운동에 참여하시는 모든 성도님들이 순종할 때 주시는 기쁨과 행복을 누리게 되시는 꿈</label>
+                    <label>2. 일만성도 파송운동이 진행되는 모든 지역의 이웃 작은 교회들과의 상생이 이뤄지는 꿈</label>
+                    <br><br>
+                    <h5>일만성도 파송운동과 관련한 2가지 기도제목</h5>
+                    <label>1. 일만성도 파송운동이 분당우리교회 성도님들에게 상처 없이 진행되게 하옵소서.</label>
+                    <label>2. 일만성도 파송운동이 하나님의 뜻에 의해서 차질없이 진행되게 하옵소서.</label>
+
+                    <br>
                 </div>
             </div>
         </div>
