--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
         <div class="row">
             <div class="col-md-3" style="padding: 0">
                 <div class="navbar navbar-dark bg-success container-fluid">
-                    <a class="navbar-brand" href="index.html">분당우리교회 일만성도파송운동</a>
+                    <div class="navbar-brand">분당우리교회</div>
+                    <!-- <a class="navbar-brand" href="index.html">일만성도파송운동</a> -->
+                    <div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <label class="btn btn-outline-light" for="btnradio1">일만성도파송운동</label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <label class="btn btn-outline-light" for="btnradio2">자영업 성도 사업장</label>
+                    </div>
                 </div>
                 <div class="px-2">
                     <div class="input-group mt-2 mb-2">
@@ -47,8 +55,10 @@
                     <div class="container">
                         <ul class="nav justify-content-center">
                             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted" onclick="openAbout();">About</a></li>
-                            <li class="nav-item"><a href="https://www.woorichurch.org" target="_blank" class="nav-link px-2 text-muted">분당우리교회</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"
+                                    onclick="openAbout();">About</a></li>
+                            <li class="nav-item"><a href="https://www.woorichurch.org" target="_blank"
+                                    class="nav-link px-2 text-muted">분당우리교회</a></li>
                         </ul>
                     </div>
 
