--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
         <div class="row">
             <div class="col-md-3" style="padding: 0">
                 <div class="navbar navbar-dark bg-success container-fluid">
-                    <div class="navbar-brand">분당우리교회</div>
-                    <!-- <a class="navbar-brand" href="index.html">일만성도파송운동</a> -->
-                    <div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group">
+                    <div class="navbar-brand">분당우리교회 일만성도파송운동</div>
+                    <div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group" style="width:100%">
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                         <label class="btn btn-outline-light" for="btnradio1">일만성도파송운동</label>
-
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                        <label class="btn btn-outline-light" for="btnradio2">자영업 성도 사업장</label>
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onClick="location.href='biz.html'">
+                        <label class="btn btn-outline-light" for="btnradio2">자영업성도사업장</label>
                     </div>
                 </div>
                 <div class="px-2">
