--- a/biz.html
+++ b/biz.html
@@ -31,27 +31,33 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3" style="padding: 0">
-                <div class="navbar navbar-dark bg-success container-fluid">
-                    <a class="navbar-brand" href="index.html">분당우리교회 자영업 성도 사업장</a>
+                <div class="navbar navbar-dark bg-primary container-fluid">
+                    <div class="navbar-brand">분당우리교회 자영업성도사업장</div>
+                    <div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group" style="width:100%">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" onClick="location.href='index.html'">
+                        <label class="btn btn-outline-light" for="btnradio1">일만성도파송운동</label>
+                        
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked>
+                        <label class="btn btn-outline-light" for="btnradio2">자영업성도사업장</label>
+                    </div>
                 </div>
                 <div class="px-2">
-                    <div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group">
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                        <label class="btn btn-outline-success" for="btnradio1">전체</label>
+                    <div class="btn-group mt-2" role="group" aria-label="Basic radio toggle button group" style="width:100%">
+                        <input type="radio" class="btn-check" name="btnradio_dscd" id="btnradio_all" autocomplete="off" checked>
+                        <label class="btn btn-outline-primary" for="btnradio_all">전체</label>
 
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                        <label class="btn btn-outline-success" for="btnradio2">외식업</label>
+                        <input type="radio" class="btn-check" name="btnradio_dscd" id="btnradio_catering" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio_catering">외식업</label>
 
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                        <label class="btn btn-outline-success" for="btnradio3">서비스업</label>
+                        <input type="radio" class="btn-check" name="btnradio_dscd" id="btnradio_service" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio_service">서비스업</label>
 
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                        <label class="btn btn-outline-success" for="btnradio4">도소매업</label>
+                        <input type="radio" class="btn-check" name="btnradio_dscd" id="btnradio_retail" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio_retail">도소매업</label>
                     </div>
                     <div class="input-group mt-2 mb-2">
                         <input class="form-control" id="ibx_searchChurch" placeholder="사업장 찾기" />
                     </div>
-                    <!-- <div class="list-group overflow-auto" style="height: calc(100vh - 7rem)"> -->
                     <div class="list-group overflow-auto" style="height: calc(100vh - 10.4rem)">
                         <div id="church-list"></div>
                     </div>
