--- a/biz.html
+++ b/biz.html
@@ -59,7 +59,7 @@
                         <input class="form-control" id="ibx_searchChurch" placeholder="사업장 찾기" />
                     </div>
                     <div class="list-group overflow-auto" style="height: calc(100vh - 10.4rem)">
-                        <div id="church-list"></div>
+                        <div id="biz-list"></div>
                     </div>
                 </div>
                 <footer class="footer mt-auto py-2 bg-light">
@@ -161,9 +161,9 @@
         });
     </script>
 
-    <script src="data/churchlist.js"></script>
+    <script src="data/bizlist.js"></script>
     <script src="index.js"></script>
-    <script src="search/search.js"></script>
+    <script src="search/search_biz.js"></script>
     <script src="map/map.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
